# Finovo-AI

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: advisor_agent.py
backend/app/api/: agent_routes.py  crypto_routes.py  mf_routes.py
backend/app/core/: crypto_engine.py  mf_engine.py
backend/app/services/: coingecko.py  mfapi.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(modules)/: layout.tsx
frontend/app/about/: page.tsx
frontend/app/dashboard/: layout.tsx  loading.tsx  page.tsx
frontend/app/logo-test/: page.tsx
frontend/components/charts/: allocation-donut.tsx  projection-area.tsx
frontend/components/landing/: ai-intelligence.tsx  faq-section.tsx  hero-section.tsx  how-it-works.tsx  market-intelligence.tsx  portfolio-optimization.tsx  testimonials-section.tsx  trust-indicators.tsx
frontend/components/layout/: footer.tsx  navbar.tsx
frontend/components/providers/: app-providers.tsx  query-provider.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  disclaimer-badge.tsx  glass-card.tsx  input.tsx  label.tsx  loading-screen.tsx  metric-card.tsx  progress.tsx  section-header.tsx  separator.tsx  skeleton.tsx  slider.tsx  tooltip.tsx
frontend/hooks/: use-agent-chat.ts  use-crypto-recommend.ts  use-mf-recommend.ts
frontend/lib/: design-tokens.ts  formatters.ts  query-client.ts  utils.ts
frontend/types/: api.ts  index.ts
(+18 files in other folders)
