[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cachetools>=7.1.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.49.0",
]
